--- a/_posts/2021-03-05-geospatial-network-visualization/geospatial-network-visualization.Rmd
+++ b/_posts/2021-03-05-geospatial-network-visualization/geospatial-network-visualization.Rmd
@@ -2,7 +2,7 @@
 title: "Geospatial Network Visualization"
 description: "{sfnetworks} meets {ggraph}"
 author: Lorena Abad
-date: 03-03-2021
+date: 03-05-2021
 output:
   distill::distill_article:
     toc: true
@@ -39,7 +39,7 @@ which = c("output", "message", "error"))
 
 # What is this about?
 
-This post is to document my personal exploration on how to visualize spatial networks created with `sfnetworks` using `ggraph`. This all started with a [sfnetworks hackathon](https://github.com/sfnetworks/sfnetworks_viz) and should end with a successful pull request (PR) to `ggraph`. 
+This post is to document my personal exploration on how to visualize spatial networks created with `sfnetworks` using `ggraph`. This all started with a [sfnetworks hackathon](https://github.com/sfnetworks/sfnetworks_viz){target="_blank"} and should end with a successful pull request (PR) to `ggraph`. 
 
 I should start by saying, that it is probably a good idea to get familiar with `ggraph` (and `tidygraph` and `sfnetworks` while you are at it!) before going through this post. 
 
@@ -101,7 +101,7 @@ Let's go through the possibilities to combine these elements with `sfnetwork` ob
 
 ## 1. `layout_sf()`
 
-As mentioned before, a *layout* is basically the physical representation of where to place our nodes. When we are dealing with non-spatial network representations we must remember that the nodes are not meant to represent actual locations on Earth, but can be placed anywhere. ggraph provides several algorithms to make this happen. Let's take one of the examples in the [ggraph layout vignette](https://ggraph.data-imaginist.com/articles/Layouts.html) to illustrate. This will include the *layout* + *nodes* + *edges* in a non-geographical representation.
+As mentioned before, a *layout* is basically the physical representation of where to place our nodes. When we are dealing with non-spatial network representations we must remember that the nodes are not meant to represent actual locations on Earth, but can be placed anywhere. ggraph provides several algorithms to make this happen. Let's take one of the examples in the [ggraph layout vignette](https://ggraph.data-imaginist.com/articles/Layouts.html){target="_blank"} to illustrate. This will include the *layout* + *nodes* + *edges* in a non-geographical representation.
 
 ```{r}
 library(ggraph)
@@ -173,7 +173,7 @@ Much better. Now, our plot also takes into consideration the CRS and places our 
 
 Now let's give some aesthetics to our plot. If you scroll back up, you will see that our nodes don't have attributes, other than their geometry, so what should we look at? What about the degree centrality of the node? This will calculate the number of incident edges for each of our nodes. We can do this with the `centrality_degree()` function in `tidygraph`.
 
-A really nice feature about `ggraph` is that we don't need to go back to our original graph, mutate our network, save as a new object, and then call it again inside `ggraph()`. We can just call the function directly inside the `aes()`, where the calculation will be done on the fly! [Read more about it here.](https://ggraph.data-imaginist.com/articles/tidygraph.html#access-to-tidygraph-algorithms-in-ggraph-code-1)
+A really nice feature about `ggraph` is that we don't need to go back to our original graph, mutate our network, save as a new object, and then call it again inside `ggraph()`. We can just call the function directly inside the `aes()`, where the calculation will be done on the fly! [Read more about it here.](https://ggraph.data-imaginist.com/articles/tidygraph.html#access-to-tidygraph-algorithms-in-ggraph-code-1){target="_blank"}
 
 ```{r}
 library(tidygraph)
@@ -197,7 +197,7 @@ Let's move on to the final step, and connect these nodes to each other.
 
 ## 3. `geom_edge_*()`
 
-Now comes the tricky part. When we are working with graph structures in, let's call it, "abstract" space, the connections between the nodes are basically straight lines between each `from` and `to` pair. Although `ggraph` has quite a long list to represent edges ([see here](https://ggraph.data-imaginist.com/reference/index.html#section-edges)), the connections that I find most relevant for spatial networks are `geom_edge_link()` and `geom_edge_arc()`, which create a straight line or an arc between connected nodes.
+Now comes the tricky part. When we are working with graph structures in, let's call it, "abstract" space, the connections between the nodes are basically straight lines between each `from` and `to` pair. Although `ggraph` has quite a long list to represent edges ([see here](https://ggraph.data-imaginist.com/reference/index.html#section-edges){target="_blank"}), the connections that I find most relevant for spatial networks are `geom_edge_link()` and `geom_edge_arc()`, which create a straight line or an arc between connected nodes.
 
 ```{r}
 ggraph(net, layout_sf) +
@@ -206,7 +206,7 @@ ggraph(net, layout_sf) +
   coord_sf(crs = st_crs(net))
 ```
 
-Yes, I bet you are thinking this could go to [accidental aRt](https://twitter.com/accidental__aRt). But depending on the visualization you are creating, this `geom` can come in handy for some data cases, you can see it in action at [the end of this post](#show-me-more)!
+Yes, I bet you are thinking this could go to [accidental aRt](https://twitter.com/accidental__aRt){target="_blank"}. But depending on the visualization you are creating, this `geom` can come in handy for some data cases, you can see it in action at [the end of this post](#show-me-more)!
 
 But now let's look at straight lines or *links* between our nodes. We can of course pass aesthetics to all the `geom_edge_*()` functions, which refer to edge attributes. Let's color our edges by the type of road:
 
@@ -279,7 +279,7 @@ ggraph(net, layout = layout_sf) +
   facet_edges(~type)
 ```
 
-What to do then? Remember that I mention a PR? Well, I am working there to fix these issues, some of them already have a fix, others don't. I would certainly appreciate any help I can get. I opened [an issue](https://github.com/thomasp85/ggraph/issues/275) to illustrate the progress of my PR. Basically I am stuck with understanding `ggproto` objects to allow an integration of edges in geographical space. 
+What to do then? Remember that I mention a PR? Well, I am working there to fix these issues, some of them already have a fix, others don't. I would certainly appreciate any help I can get. I opened [an issue](https://github.com/thomasp85/ggraph/issues/275){target="_blank"} to illustrate the progress of my PR. Basically I am stuck with understanding `ggproto` objects to allow an integration of edges in geographical space. 
 
 If you feel like exploring what I have got so far, install `ggraph` from my forked repo. Beware, this will replace the original `ggraph`, so do this under your own risk.
 
@@ -289,7 +289,7 @@ remotes::install_github("loreabad6/ggraph")
 
 # Show me more!
 
-While testing my `ggraph` implementation, I started looking for some spatial network visualization examples done with R that I could recreate with my code. Here I added two examples of what I came up with, and will probably add more to [this GitHub repository](https://github.com/loreabad6/ggraph-spatial-examples) if you are interested in following it up. Bear in mind that most of these examples are created with `remotes::install_github("loreabad6/ggraph")`.
+While testing my `ggraph` implementation, I started looking for some spatial network visualization examples done with R that I could recreate with my code. Here I added two examples of what I came up with, and will probably add more to [this GitHub repository](https://github.com/loreabad6/ggraph-spatial-examples){target="_blank"} if you are interested in following it up. Bear in mind that most of these examples are created with `remotes::install_github("loreabad6/ggraph")`.
 
 ### Break Free from Plastic 
 
@@ -298,7 +298,7 @@ knitr::include_graphics("https://raw.githubusercontent.com/loreabad6/TidyTuesday
 ```
 
 <aside>
-For week 5 of 2021 in the [Tidy Tuesday](https://github.com/rfordatascience/tidytuesday) weekly data project, we analyzed data from the "Break Free from Plastic" initiative. Here is a [step by step guide](https://github.com/loreabad6/TidyTuesday/blob/master/R/2021/week_05.md) on how to recreate the final plot.
+For week 5 of 2021 in the [Tidy Tuesday](https://github.com/rfordatascience/tidytuesday){target="_blank"} weekly data project, we analyzed data from the "Break Free from Plastic" initiative. Here is a [step by step guide](https://github.com/loreabad6/TidyTuesday/blob/master/R/2021/week_05.md){target="_blank"} on how to recreate the final plot.
 </aside>
 
 
@@ -309,5 +309,15 @@ knitr::include_graphics("https://raw.githubusercontent.com/loreabad6/ggraph-spat
 ```
 
 <aside>
-This example is inspired on this [wonderful blogpost on Network Visualization](https://kateto.net/sunbelt2019#overlaying-networks-on-geographic-maps), where I tried to recreate the last plot showing airport connections and visitors in the U.S. Here is the [code to reproduce](https://github.com/loreabad6/ggraph-spatial-examples/blob/main/code/airports.R).
+This example is inspired on this [wonderful blogpost on Network Visualization](https://kateto.net/sunbelt2019#overlaying-networks-on-geographic-maps){target="_blank"} by Katherine Ognyanova, where I tried to recreate the last plot showing airport connections and visitors in the U.S. Here is the [code to reproduce](https://github.com/loreabad6/ggraph-spatial-examples/blob/main/code/airports.R){target="_blank"}.
+</aside>
+
+### The fourth way of visualizing a graph on a map
+
+```{r, echo = F, out.width="100%", fig.align = 'center'}
+knitr::include_graphics("https://raw.githubusercontent.com/loreabad6/ggraph-spatial-examples/main/figs/graph_on_a_map.png")
+```
+
+<aside>
+In his [very helpful blogpost](https://datascience.blog.wzb.eu/2018/05/31/three-ways-of-visualizing-a-graph-on-a-map/){target="_blank"}, Markus Neteler guides us through three different ways to plot a spatial graph on a map. With the `ggraph` and `sfnetworks` combination, we can add a fourth way! [Check here how to recreate this plot.](https://github.com/loreabad6/ggraph-spatial-examples/blob/main/code/graph-on-a-map.R){target="_blank"}
 </aside>
