--- a/about.Rmd
+++ b/about.Rmd
@@ -13,4 +13,4 @@ output:
   postcards::jolla
 ---
 
-I am a researcher with a background in environmental engineering and geospatial technologies. R is my go-to coding language for most of my data science and visualization tasks as well as scientific report and article writing. This blog is meant to share some tip and tricks I have learned along the way. You can reach me at any of the links below!
+I am a researcher with a background in environmental engineering and geospatial technologies. R is my go-to coding language for data science and visualization as well as scientific report and article writing. This blog is meant to share some tip and tricks I have learned along the way. You can reach me at any of the links below!
